# gmail-followup-manager

./: .gitignore  INSTALLATION_GUIDE.md  README.md  app.py  app_backup.py  clean_start.py  email-followup-guide.md  pyproject.toml  quick-start-guide.md  run.bat
src/: config.py
src/auth/: gmail_auth.py
src/services/: calendar_service.py  data_service.py  gmail_service.py
